some more progress on the docs

--- a/doc/bonsai.bib
+++ b/doc/bonsai.bib
@@ -79,3 +79,41 @@ note = "\url{http://www.antlr.org/wiki/display/ANTLR3/Code+Generation+Targets}"
 title = "The \texttt{System.Linq.Expressions} Namespace",
 note = "\url{http://msdn.microsoft.com/en-us/library/system.linq.expressions.aspx}"
 }
+
+@misc { csharp_4_specs,
+title = "C\# 4.0 Specifications",
+note = "\url{http://download.microsoft.com/download/7/E/6/7E6A548C-9C20-4C80-B3B8-860FAF20887A/CSharp 4.0 Specification.doc}"
+}
+
+@misc { dynamic_meta_object,
+title = "The \c{DynamicMetaObject} Class",
+note = "\url{http://msdn.microsoft.com/en-us/library/system.dynamic.dynamicmetaobject(VS.100).aspx}"
+}
+
+@misc { i_dynamic_meta_object_provider,
+title = "The \c{IDynamicMetaObjectProvider} Interface",
+note = "\url{http://msdn.microsoft.com/en-us/library/system.dynamic.idynamicmetaobjectprovider(VS.100).aspx}"
+}
+
+@inbook {antlr_book_treeconstruction,
+author = "Terrence Parr",
+title = "The Definitive {ANTLR} Reference: Building Domain-Specific Languages",
+publisher = "Pragmatic Bookshelf",
+year = "2007",
+chapter = "7",
+pages = "149-178"
+}
+
+@inbook {antlr_book_treegrammars,
+author = "Terrence Parr",
+title = "The Definitive {ANTLR} Reference: Building Domain-Specific Languages",
+publisher = "Pragmatic Bookshelf",
+year = "2007",
+chapter = "8",
+pages = "179-194"
+}
+
+@misc { expressions_trees_35,
+title = "Expression Trees",
+note = "\url{http://msdn.microsoft.com/en-us/library/bb397951.aspx}"
+}
